# mp-yearmonth

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
mp_yearmonth/: __init__.py  yearmonth.py
tests/: test_yearmonth.py
