[tool.poetry]
name = "mp-yearmonth"
version = "0.1.0"
description = "A year-month datatype for Python."
authors = ["Ramon Torres <raymondjavaxx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
