[tool.poetry]
name = "mp-yearmonth"
version = "0.2.0"
description = "A year-month datatype for Python."
authors = ["Ramon Torres <ramon@macropoetry.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.urls]
homepage = "https://github.com/raymondjavaxx/mp-yearmonth"
tracker = "https://github.com/raymondjavaxx/mp-yearmonth/issues"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
